fix: fix data-table line height in cells for better readability when having multi lines

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -176,6 +176,7 @@ textarea.ui-inputtext {
   font-weight: 400;
   color: $kGrayscale3;
   text-overflow: ellipsis;
+  line-height: 22px;
 }
 .ui-datatable .ui-datatable-data tr.ui-state-highlight{
   background-color: #ffffff;
